fixing sheet names and merged cells, added instructions link

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,12 @@
       <label for="data">Upload csv: </label>
       <input type="file" id="data" accept=".csv" />
     </div>
+    <a
+      href="https://docs.google.com/document/d/1v0KNfIrAskldxcY97_bQ31kXkxutuUz8CzVEWLZ-BlI/edit"
+      class="instructions"
+      target="_blank"
+      >instructions?</a
+    >
     <button onclick="generate()">Generate File</button>
   </body>
 </html>
