removing ? from instructions text

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       href="https://docs.google.com/document/d/1v0KNfIrAskldxcY97_bQ31kXkxutuUz8CzVEWLZ-BlI/edit"
       class="instructions"
       target="_blank"
-      >instructions?</a
+      >instructions</a
     >
     <button onclick="generate()">Generate File</button>
   </body>
